--- a/server/src/main/resources/application.yaml
+++ b/server/src/main/resources/application.yaml
@@ -3,9 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:mydb
+    url: jdbc:h2:mem:mydb;
     username: sa
-    password: admin
+    password:
     driverClassName: org.h2.Driver
   h2:
     console.enabled: true
