--- a/server/build.gradle
+++ b/server/build.gradle
@@ -32,16 +32,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
 
-liquibase {
-	activities {
-		main {
-			changeLogFile 'src/main/resources/db/master.xml' // Arquivo de changelog do Liquibase
-			url 'jdbc:h2:mem:mydb' // URL do banco de dados
-			username 'sa'
-			password 'admin'
-		}
-	}
+	implementation group: 'org.liquibase', name: 'liquibase-core'
 }
 
