--- a/server/build.gradle
+++ b/server/build.gradle
@@ -30,9 +30,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation:3.0.0'
 	compileOnly 'org.projectlombok:lombok:1.18.34'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok:1.18.34'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
+
 
 	implementation group: 'org.liquibase', name: 'liquibase-core'
 }
